# Falanet-Terminal-Email-Client

./: CMakeLists.txt  CMakeLists.txt.new  README.md  make.sh
etc/: main.conf
ext/cyrus-imap/lib/: imapurl.c
ext/libetpan/: CMakeLists.txt
ext/libetpan/build-cmake/: libetpan-config.h
ext/libetpan/src/driver/implementation/imap/: imapdriver_tools.c
ext/libetpan/src/low-level/mime/: mailmime_types_helper.c
src/: addressbook.cpp  addressbook.h  auth.cpp  auth.h  body.cpp  body.h  cacheutil.cpp  cacheutil.h  config.cpp  config.h  contact.cpp  contact.h  crypto.cpp  crypto.h  encoding.cpp  encoding.h  falanet.1  flag.cpp  flag.h  header.cpp  header.h  html2falaclient  html2falanet  html_parser.cpp  html_parser.h  imap.cpp  imap.h  imapcache.cpp  imapcache.h  imapindex.cpp  imapindex.h  imapmanager.cpp  imapmanager.h  libetpan_help.h  lockfile.cpp  lockfile.h  log.cpp  log.h  loghelp.cpp  loghelp.h  (+28 more)
themes/: default.conf
util/: debug-nmail.sh
